---- Changes since 1.170 ----
First version of this module, which can display the status of IDE hard drives that support SMART.
---- Changes since 1.270 ----
Added a Module Config option to force ATA mode for SATA disks that appear as SCSI.
---- Changes since 1.350 ----
Added a Module Config option for extra smartctl command-line args, like -d 3ware,0
---- Changes since 1.380 ----
ATA mode is now used by default on CentOS and Redhat Enterprise versions 5 and above.
---- Changes since 1.440 ----
SCSI drives are visible in the System and Server Status module.